--- a/offer.html
+++ b/offer.html
@@ -33,7 +33,7 @@
 <meta http-equiv="etag" content="f4946547d0a9c5164cd78fc371300f7d"/>
 <meta property="og:title" content="Home | Typenmy Enterprise"/>
 <meta property="og:type" content="article"/>
-<meta property="og:url" content="https://typenmy.wixsite.com/typenmy/offers"/>
+<meta property="og:url" content="https://typenmy.com/offers"/>
 <meta property="og:site_name" content="Home | Typenmy Enterprise"/>
 <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"/>
 
