--- a/design-gallery.html
+++ b/design-gallery.html
@@ -341,7 +341,7 @@
   </script>
   <script async charset="utf-8" data-requirecontext="_" data-requiremodule="tpaGalleries" src="https://static.parastorage.com/services/santa/1.2160.7/packages-bin/tpaGalleries/tpaGalleries.min.js" type="text/javascript">
   </script>
-  <script async charset="utf-8" data-requirecontext="_" data-requiremodule="wixads" src="https://static.parastorage.com/services/santa/1.2177.3/packages-bin/wixads/wixads.min.js" type="text/javascript">
+ <!-- <script async charset="utf-8" data-requirecontext="_" data-requiremodule="wixads" src="https://static.parastorage.com/services/santa/1.2177.3/packages-bin/wixads/wixads.min.js" type="text/javascript"> -->
   </script>
   <script async charset="utf-8" data-requirecontext="_" data-requiremodule="messageView" src="https://static.parastorage.com/services/santa/1.2149.2/packages-bin/messageView/messageView.min.js" type="text/javascript">
   </script>
@@ -1139,7 +1139,7 @@
         .s20[data-disabled="true"] .s20link {background-color:rgba(204, 204, 204, 1);border-color:rgba(204, 204, 204, 1);}
         .s20[data-disabled="true"] .s20label {color:#FFFFFF;}
         </style>
-        <style data-reactid=".0.0.$wixAds" type="text/css">
+       <!-- <style data-reactid=".0.0.$wixAds" type="text/css">
         .wixAdsmobileAd {width:100%;height:30px;position:relative;display:block;text-align:center;background-image:url(https://static.parastorage.com/services/skins/2.1229.63/images/wysiwyg/core/themes/base/wixads/BG91x1.jpg);background-repeat:repeat;background-size:100% 30px;z-index:999;}
         .wixAdsdesktopWADBottom {position:fixed;z-index:999;width:100%;bottom:0;max-height:10vh;}
         .wixAdsdesktopWADBottomContent {width:100%;height:40px;text-align:center;background-color:#404040;border-radius:6px 6px 0 0;pointer-events:all;cursor:pointer;}
@@ -1176,7 +1176,7 @@
         .wixAdsdesktopWADBottomContent .wixAds_txt {color:#fff;font-weight:bold;font-size:15px;}
         .wixAdsdesktopWADBottomContent .wixAds_siteBanner .wixAds_txt {line-height:47px;}@media (orientation: landscape){.wixAdsmobileAd {display:none;}}
         @media (orientation: landscape){.wixAds_wixAds[data-state~="mobile"] {display:none;}}
-        </style>
+        </style> -->
         <style data-reactid=".0.0.$deadComp" type="text/css">
         .deadComp {background:transparent;}
         </style>
@@ -1246,7 +1246,6 @@
           </style>
         </div>
       </div>
-      
       <div class="siteBackground" data-reactid=".0.$SITE_BACKGROUND" id="SITE_BACKGROUND" style="position: absolute; top: 0px; height: 1379px; width: 1300px;">
         <div class="siteBackgroundprevious" data-reactid=".0.$SITE_BACKGROUND.$noPrevscrollpreview" id="SITE_BACKGROUND_previous_noPrev">
           <div class="siteBackgroundpreviousImage" data-reactid=".0.$SITE_BACKGROUND.$noPrevscrollpreview.0" id="SITE_BACKGROUNDpreviousImage"></div>
@@ -1411,32 +1410,32 @@
                           <div class="s8repeaterButtonbg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyqoidv.0.0" id="comp-iy2ej8z10bg" style="text-align:right;">
                             <p class="s8repeaterButtonlabel" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyqoidv.0.0.0" id="comp-iy2ej8z10label" style="text-align: right; line-height: 30px;">Home</p>
                           </div>
-                        </div></a><a class="s8repeaterButton" data-listposition="center" data-original-gap-between-text-and-btn="1" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0dxw8f7" data-state="menu idle link notMobile" href="https://typenmy.wixsite.com/typenmy/offers" id="comp-iy2ej8z11" style="display: inherit; color: grey; width: 61px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;" target="_self">
+                        </div></a> <a class="s8repeaterButton" data-listposition="center" data-original-gap-between-text-and-btn="1" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0dxw8f7" data-state="menu idle link notMobile" href="https://typenmy.wixsite.com/typenmy/offers" id="comp-iy2ej8z11" style="display: inherit; color: grey; width: 61px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;" target="_self">
                         <div class="s8repeaterButton_gapper" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0dxw8f7.0">
                           <div class="s8repeaterButtonbg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0dxw8f7.0.0" id="comp-iy2ej8z11bg" style="text-align:right;">
                             <p class="s8repeaterButtonlabel" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0dxw8f7.0.0.0" id="comp-iy2ej8z11label" style="text-align: right; line-height: 30px;">Offers</p>
                           </div>
-                        </div></a><a class="s8repeaterButton" data-listposition="center" data-original-gap-between-text-and-btn="0" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixytseoe" data-state="menu idle link notMobile" href="https://typenmy.wixsite.com/typenmy/news" id="comp-iy2ej8z12" style="display: inherit; color: grey; width: 77px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;" target="_self">
+                        </div></a> <a class="s8repeaterButton" data-listposition="center" data-original-gap-between-text-and-btn="0" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixytseoe" data-state="menu idle link notMobile" href="https://typenmy.wixsite.com/typenmy/news" id="comp-iy2ej8z12" style="display: inherit; color: grey; width: 77px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;" target="_self">
                         <div class="s8repeaterButton_gapper" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixytseoe.0">
                           <div class="s8repeaterButtonbg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixytseoe.0.0" id="comp-iy2ej8z12bg" style="text-align:right;">
                             <p class="s8repeaterButtonlabel" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixytseoe.0.0.0" id="comp-iy2ej8z12label" style="text-align: right; line-height: 30px;">Products</p>
                           </div>
-                        </div></a><a class="s8repeaterButton" data-listposition="center" data-original-gap-between-text-and-btn="1" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyudr8p" data-state="menu selected idle link notMobile" href="https://typenmy.wixsite.com/typenmy/design-gallery" id="comp-iy2ej8z13" style="display: inherit; color: grey; width: 65px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;" target="_self">
+                        </div></a> <a class="s8repeaterButton" data-listposition="center" data-original-gap-between-text-and-btn="1" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyudr8p" data-state="menu selected idle link notMobile" href="https://typenmy.wixsite.com/typenmy/design-gallery" id="comp-iy2ej8z13" style="display: inherit; color: grey; width: 65px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;" target="_self">
                         <div class="s8repeaterButton_gapper" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyudr8p.0">
                           <div class="s8repeaterButtonbg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyudr8p.0.0" id="comp-iy2ej8z13bg" style="text-align:right;">
                             <p class="s8repeaterButtonlabel" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyudr8p.0.0.0" id="comp-iy2ej8z13label" style="text-align: right; line-height: 30px;">Design</p>
                           </div>
-                        </div></a><a class="s8repeaterButton" data-listposition="center" data-original-gap-between-text-and-btn="0" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyu7nrw" data-state="menu idle link notMobile" href="https://typenmy.wixsite.com/typenmy/contact-us" id="comp-iy2ej8z14" style="display: inherit; color: grey; width: 96px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;" target="_self">
+                        </div></a> <a class="s8repeaterButton" data-listposition="center" data-original-gap-between-text-and-btn="0" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyu7nrw" data-state="menu idle link notMobile" href="https://typenmy.wixsite.com/typenmy/contact-us" id="comp-iy2ej8z14" style="display: inherit; color: grey; width: 96px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;" target="_self">
                         <div class="s8repeaterButton_gapper" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyu7nrw.0">
                           <div class="s8repeaterButtonbg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyu7nrw.0.0" id="comp-iy2ej8z14bg" style="text-align:right;">
                             <p class="s8repeaterButtonlabel" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-ixyu7nrw.0.0.0" id="comp-iy2ej8z14label" style="text-align: right; line-height: 30px;">Order Form</p>
                           </div>
-                        </div></a><a class="s8repeaterButton" data-listposition="right" data-original-gap-between-text-and-btn="1" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0bvduzo" data-state="menu idle link notMobile" href="https://typenmy.wixsite.com/typenmy/request-quote" id="comp-iy2ej8z15" style="display: inherit; color: grey; width: 137px; box-sizing: border-box; height: 0px; overflow: hidden; position: absolute;" target="_self">
+                        </div></a> <a class="s8repeaterButton" data-listposition="right" data-original-gap-between-text-and-btn="1" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0bvduzo" data-state="menu idle link notMobile" href="https://typenmy.wixsite.com/typenmy/request-quote" id="comp-iy2ej8z15" style="display: inherit; color: grey; width: 137px; box-sizing: border-box; height: 0px; overflow: hidden; position: absolute;" target="_self">
                         <div class="s8repeaterButton_gapper" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0bvduzo.0">
                           <div class="s8repeaterButtonbg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0bvduzo.0.0" id="comp-iy2ej8z15bg" style="text-align:right;">
                             <p class="s8repeaterButtonlabel" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$dataItem-j0bvduzo.0.0.0" id="comp-iy2ej8z15label" style="text-align: right; line-height: 30px;">Request Quotation</p>
                           </div>
-                        </div></a><a class="s8repeaterButton" data-listposition="right" data-original-gap-between-text-and-btn="1" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$__more__" data-state="menu idle header notMobile" id="comp-iy2ej8z1__more__" style="display: inline-block; color: grey; width: 55px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;">
+                        </div></a> <a class="s8repeaterButton" data-listposition="right" data-original-gap-between-text-and-btn="1" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$__more__" data-state="menu idle header notMobile" id="comp-iy2ej8z1__more__" style="display: inline-block; color: grey; width: 55px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;">
                         <div class="s8repeaterButton_gapper" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$__more__.0">
                           <div class="s8repeaterButtonbg" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$__more__.0.0" id="comp-iy2ej8z1__more__bg" style="text-align:right;">
                             <p class="s8repeaterButtonlabel" data-reactid=".0.$SITE_ROOT.$desktop_siteRoot.$SITE_HEADER.1.1.$comp-iy2ej8z2.0.$comp-iy2ej8z1.0.$__more__.0.0.0" id="comp-iy2ej8z1__more__label" style="text-align: right; line-height: 30px;">More</p>
