--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
   <meta content="88cb5830385c9b7c443956286e3c1377" http-equiv="etag">
   <meta content="Home | Typenmy Enterprise" property="og:title">
   <meta content="article" property="og:type">
-  <meta content="https://typenmy.com/typenmy/products" property="og:url">
+  <meta content="https://typenmy.com/products" property="og:url">
   <meta content="Home | Typenmy Enterprise" property="og:site_name">
   <meta content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" name="SKYPE_TOOLBAR">
   <meta content="width=980, user-scalable=yes" id="wixMobileViewport" name="viewport">
