--- a/quote.html
+++ b/quote.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Home | Typenmy Enterprise</title>
   <meta content="" name="fb_admins_meta_tag">
-  <link href="https://www.wix.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://www.wix.com/favicon.ico" rel="apple-touch-icon" type="image/x-icon">
+  <link href="https://typenmy.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="https://typenmy.com/favicon.ico" rel="apple-touch-icon" type="image/x-icon">
   <script type="text/javascript">
     var santaBase = 'https://static.parastorage.com/services/santa/1.2177.3';
         var clientSideRender = true;
@@ -27,7 +27,7 @@
   <meta content="88cb5830385c9b7c443956286e3c1377" http-equiv="etag">
   <meta content="Home | Typenmy Enterprise" property="og:title">
   <meta content="article" property="og:type">
-  <meta content="https://typenmy.wixsite.com/typenmy/request-quote" property="og:url">
+  <meta content="https://typenmy.com" property="og:url">
   <meta content="Home | Typenmy Enterprise" property="og:site_name">
   <meta content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" name="SKYPE_TOOLBAR">
   <meta content="width=980, user-scalable=yes" id="wixMobileViewport" name="viewport">
