--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Home | Typenmy Enterprise</title>
   <meta content="" name="fb_admins_meta_tag">
-  <link href="https://typenmy.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://typenmy.com/favicon.ico" rel="apple-touch-icon" type="image/x-icon">
+  <link href="https://www.wix.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="https://www.wix.com/favicon.ico" rel="apple-touch-icon" type="image/x-icon">
   <script type="text/javascript">
     var santaBase = 'https://static.parastorage.com/services/santa/1.2177.7';
         var clientSideRender = true;
@@ -27,7 +27,7 @@
   <meta content="11f0c4eaa85af717bf52d8fd28d5f54f" http-equiv="etag">
   <meta content="Home | Typenmy Enterprise" property="og:title">
   <meta content="article" property="og:type">
-  <meta content="https://typenmy.com" property="og:url">
+  <meta content="https://typenmy.wixsite.com/typenmy" property="og:url">
   <meta content="Home | Typenmy Enterprise" property="og:site_name">
   <meta content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" name="SKYPE_TOOLBAR">
   <meta content="width=980, user-scalable=yes" id="wixMobileViewport" name="viewport">
@@ -67,8 +67,13 @@
   <meta content="!" name="fragment"><!-- DATA -->
 
   <script type="text/javascript">
-
+    var adData = {"topLabel":"<span class=\"smallMusa\">(Wix-Logo) <\/span>Create a <span class=\"smallLogo\">Wix<\/span> site!","topContent":"100s of templates<br />No coding needed<br /><span class=\"emphasis spacer\">Start now >><\/span>","footerLabel":"<div class=\"adFootBox\"><div class=\"siteBanner\" ><div class=\"siteBanner\"><div class=\"wrapper\"><div class=\"bigMusa\">(Wix Logo)<\/div><div class=\"txt shd\" style=\"color:#fff\">This site was created using <\/div> <div class=\"txt shd\"><a  href=\"http://www.wix.com?utm_campaign=vir_wixad_live&experiment_id=abtestbanner122400001\" style=\"color:#fff\"> WIX.com. <\/a><\/div> <div class=\"txt shd\" style=\"color:#fff\"> Create your own for FREE <span class=\"emphasis\"> >><\/span><\/div><\/div><\/div><\/div><\/div>","adUrl":"http://www.wix.com/lpviral/enviral?utm_campaign=vir_wixad_live&experiment_id=abtestbanner122400001"};
+    var mobileAdData = {"footerLabel":"7c3dbd_67131d7bd570478689be752141d4e28a.jpg","adUrl":"http://www.wix.com?utm_campaign=vir_wixad_live&experiment_id=abtestbanner122400001"};
     var usersDomain = "https://users.wix.com/wix-users";
   </script>
 </head>
+<body>
+  <div id="SITE_CONTAINER"></div>
+  <div comp="wysiwyg.viewer.components.WixAds" id="wixFooter" skin="wysiwyg.viewer.skins.wixadsskins.WixAdsWebSkin"></div>
+</body>
 </html>
