--- a/offers.html
+++ b/offers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="">
 <head>
-  <title>Home | Typenmy Enterprise | Offers</title>
+  <title>Offers | Typenmy Enterprise</title>
 </head>
 <body>
   <div id="SITE_CONTAINER">
