--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta charset="utf-8">
-  <title>News | Typenmy Enterprise</title>
+  <title>Products | Typenmy Enterprise</title>
   <meta content="" name="fb_admins_meta_tag">
   <link href="https://www.wix.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://www.wix.com/favicon.ico" rel="apple-touch-icon" type="image/x-icon">
@@ -822,7 +822,7 @@
   <script async charset="utf-8" data-requirecontext="_" data-requiremodule="//www.google-analytics.com/analytics.js" src="//www.google-analytics.com/analytics.js" type="text/javascript">
   </script>
   <meta content="Your Creative Advisor" name="keywords">
-  <meta content="News | Typenmy Enterprise" property="og:title">
+  <meta content="Products | Typenmy Enterprise" property="og:title">
   <meta content="https://typenmy.com/products" property="og:url">
 </head>
 <body class="" style="">
