--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html class="">
-<body>
-  <head>
-  Typenmy //typenmy logo
-  </head>
+<html>
+  <header>
+    <style>
+      .header{
+      background-color: green;
+      font-family: arial;
+      color: white;
+      margin: 1%;
+      padding: 1%;
+      text-align:center;
+     }
+p#motto{
+  font-style:italic;
+     }
+    </style>
   
-  //banner ads
-  //footer with company contact details.
-</body>
+  </header>
+  <body>
+    <title>Home| Typenmy Enterprise</title>
+<div id="main name" class="header">
+  <span class="header-name">
+    <h1>Typenmy Enterprise</h1>
+    <p id="motto">Printing & Designing service</p>
+    </span>
+</div>
+  </body>
 </html>
