--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
-<!DOCTYPE html>
 <html>
-  <header>
-    <style>
-      .header{
-      background-color: green;
-      font-family: arial;
-      color: white;
-      margin: 1%;
-      padding: 1%;
-      text-align:center;
-     }
-p#motto{
-  font-style:italic;
-     }
-    </style>
-  
-  </header>
-  <body>
-    <title>Home| Typenmy Enterprise</title>
+<title>Home| Typenmy Enterprise</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    
+<body>
+
 <div id="main name" class="header">
   <span class="header-name">
     <h1>Typenmy Enterprise</h1>
     <p id="motto">Printing & Designing service</p>
-    </span>
+  </span>
+</div><br><br>
+    
+<div class="w3-content w3-display-container">
+ <img class="mySlides" src="http://i86.photobucket.com/albums/k91/Fulanah/typen%20banner_zps9x6z8vjs.jpg" style="width 100%"> 
+<img class="mySlides" src="http://i86.photobucket.com/albums/k91/Fulanah/holiday%20banner_zpsp5nleoue.jpg" style="width 100%">
 </div>
+
+<script>
+var slideIndex = 0;
+carousel();
+
+function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none"; 
+    }
+    slideIndex++;
+    if (slideIndex > x.length) {slideIndex = 1} 
+    x[slideIndex-1].style.display = "block"; 
+    setTimeout(carousel, 2000); // Change image every 2 seconds
+}
+</script>  
+  
+</div>
+  
+
   </body>
 </html>
+
