--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
 <img class="mySlides" src="http://i86.photobucket.com/albums/k91/Fulanah/holiday%20banner_zpsp5nleoue.jpg" style="width 100%">
 </div>
 
+<style>
+.header{
+  background-color: green;
+  font-family: arial;
+  color: white;
+  margin: 1%;
+  padding: 1%;
+  text-align:center;
+
+}
+p#motto{
+  font-style:italic;
+}
+
+</style>
+
 <script>
 var slideIndex = 0;
 carousel();
