--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Home| Typenmy Enterprise</title>
-    
+ <link rel="icon" href="favicon.ico" type="image/x-icon">    
 <style>
 .header{
   background-color: green;
