--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Home| Typenmy Enterprise</title>
- <link rel="icon" href="favicon.ico" type="image/x-icon">    
+ <link rel="icon" type="image/vnd.microsoft.icon" href="http://s86.photobucket.com/user/Fulanah/media/Typen%20single%20logo_zpsfvohviws.png.html">  
 <style>
 .header{
   background-color: green;
