--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   text-align:center;
 
 }
-p#motto{
-  font-style:italic;
-}
+p#motto{font-style:italic;}
+    
+img {max-width:100%;}
 
 </style>
 
