--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@ button {
 button:hover {
   background: lightblue;;
 }
-
-    </style>
+.btn{
+  text-align: center;
+}
+</style>
     
 <body>
 
@@ -50,6 +52,8 @@ button:hover {
 <br><br>  
 <div id="nagivate "class="btn">
    <button onclick="myFunction()">Online Order</button>
+   <button onclick="myFunction()">Delivery Enquiries</button>
+   <button onclick="myFunction()">Contact Us</button>
 </div>
     
     <script>
