--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+<link rel="icon" type="image/png" sizes="16x16" href="http://s86.photobucket.com/user/Fulanah/media/favicon.ico_zpslj62kpqg.png.html">
+    </head>
 <title>Home| Typenmy Enterprise</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
