--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-<link rel="icon" type="image/png" sizes="16x16" href="http://s86.photobucket.com/user/Fulanah/media/favicon.ico_zpslj62kpqg.png.html">
+<link rel="icon" type="image/x-icon" sizes="16x16" href="http://s86.photobucket.com/user/Fulanah/media/favicon.ico_zpslj62kpqg.png.html">
     </head>
 <title>Home| Typenmy Enterprise</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
