--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
     <head>
 <link rel="icon" type="image/png" sizes="16x16" href="http://i86.photobucket.com/albums/k91/Fulanah/favicon.ico_zpslj62kpqg.png">
-    </head>
-<title>Home| Typenmy Enterprise</title>
+<title>Home| Typenmy Enterprise</title> </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
