--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ button:hover {
 <div id="nagivate" class="btn">
    <button onclick="window.location='http://www.facebook.com/typenmy';">Online order</button>
    <button onclick="myFunction()">Delivery Enquiries</button>
-  <button onclick="window.location='https://mssg.me/typenmy';">Contact Us</button>
+  <button onclick="window.location='http://mssg.me/typenmy';">Contact Us</button>
 </div>
 
 <script>
