--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ button:hover {
 </div>
 <br><br>  
 <div id="nagivate" class="btn">
-   <button onclick="window.location='http://www.facebook.com/typenmy';">Online order</button>
+   //<button onclick="window.location='http://www.facebook.com/typenmy';">Online order</button>
+    <form action="order.html"><input type="submit" value="Online order"></form> 
    <button onclick="myFunction()">Delivery Enquiries</button>
   <button onclick="window.location='http://mssg.me/typenmy';">Contact Us</button>
 </div>
