--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head><link rel="icon" type="image/png" sizes="16x16" href="http://i86.photobucket.com/albums/k91/Fulanah/favicon.ico_zpslj62kpqg.png">
 <title>Home| Typenmy Enterprise</title>
+     <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
