--- a/home/index.html
+++ b/home/index.html
@@ -1,52 +1,15 @@
 <html>
 <head><link rel="icon" type="image/png" sizes="16x16" href="http://i86.photobucket.com/albums/k91/Fulanah/favicon.ico_zpslj62kpqg.png">
 <title>Home| Typenmy Enterprise</title>
-     <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 </head>
+<link rel="stylesheet" href="my-slider.css"/>
+<script src="ism-2.2.min.js"></script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <style>
-    .header{
-  background-color: green;
-  font-family: arial;
-  color: white;
-  margin: 1%;
-  padding: 1%;
-  text-align:center;
-
-}
-p#motto{
-  font-style:italic;
-}
-
-}
-button {
- background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-button:hover {
-  background: lightblue;;
-}
-.btn{
-  text-align: center;
-}
-
-
-    </style>
+<link rel="stylesheet" type="text/css" href="home.css"> 
    
 <body>
-   
 
 <div id="main name" class="header">
  <span class="header-name">
@@ -55,35 +18,41 @@ button:hover {
   </span>
   </div><br><br>
     
-<div id="banner" class="w3-content w3-display-container">
+<!-- <div id="banner" class="w3-content w3-display-container">
+  
  <img class="mySlides" src="http://i86.photobucket.com/albums/k91/Fulanah/typen%20banner_zps9x6z8vjs.jpg" style="width 100%;height:auto;"> 
 <img class="mySlides" src="http://i86.photobucket.com/albums/k91/Fulanah/holiday%20banner_zpsp5nleoue.jpg" style="width 100%;height:auto;">
+</div> -->
+  <div class="ism-slider" id="my-slider">
+  <ol>
+    <li>
+      <img src="http://i86.photobucket.com/albums/k91/Fulanah/web%20banner%20main_zpskq3ymyhp.jpg">
+     <div class="ism-caption ism-caption-0"></div> 
+    </li>
+    <li>
+      <img src="http://i86.photobucket.com/albums/k91/Fulanah/holiday%20banner_zpsp5nleoue.jpg">
+     <div class="ism-caption ism-caption-0"></div> 
+    </li>
+  </ol>
 </div>
+
+
 <br><br>  
 <div id="nagivate" class="btn">
-   <!-- <button onclick="window.location='http://www.facebook.com/typenmy';">Online order</button> -->
-    <form action="order.html"><input type="submit" value="Online order"></form> 
-   <button onclick="myFunction()">Delivery Enquiries</button>
-  <button onclick="window.location='http://mssg.me/typenmy';">Contact Us</button>
+
+<form action="order.html">
+   	<input type="submit" name="order" value="Online order">
+   </form> 
+
+   <form action="">
+   	<input type="submit" name="order" value="Delivery Enquiries">
+   </form>
+
+   <button onclick="window.location='http://mssg.me/typenmy';">Contact Us</button>
 </div>
+<br>
 
-<script>
-    //image slider
-var slideIndex = 0;
-carousel();
-
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-      x[i].style.display = "none"; 
-    }
-    slideIndex++;
-    if (slideIndex > x.length) {slideIndex = 1} 
-    x[slideIndex-1].style.display = "block"; 
-    setTimeout(carousel, 3000); // Change image every 3 seconds
-}
-    </script>
   </body>
 </html>
+
 
